﻿# Nmap Changelog ($Id$); -*-text-*-

o Rearranged some characters classes in service matches to avoid any
  that look like POSIX collating symbols ("[.xyz.]"). John Hutchison
  discovered this error caused by one of the match lines:
    InitMatch: illegal regexp: POSIX collating elements are not supported
  [Daniel Miller]

o [NSE] Added the address-info.nse script, which shows extra information about IP addresses.

o [NSE] Added scripts http-joomla-brute, http-wordpress-brute, http-wp-enum and
  http-awstatstotal-exec. [Paulino]

o [Zenmap] Fixed zenmap deleting ports based on newer scans which did
  not actually scan the port in question. Additionally ncat now only
  updates ports with new information if the new information is the same
  protocol. Not just the same port. [Colin Rice]

o [Ncat] Fixed ncat crashing with --ssl-verify -vvv on windows. [Colin Rice]

o [NSE] Added script http-waf-detect. This script tries to determine
  if an IDS/IPS/WAF is protecting a web server. [Paulino]

o [NSE] Added the bittorrent library and bittorrent-discovery script which 
  enables us to discover peers and nodes for a particular torrent file or 
  magnet link.

o [NSE] Added basic query support to the Oracle TNS library making it possible
  for scripts to query the database server using SQL. [Patrik]

o [Ncat] Added --append-output option, that when used along with -o and/or -x
  prevents clobbering(truncating) an existing file. [Shinnok]

o [NSE] Added script broadcast-listener that attempts to discover hosts by
  passively listening to the network. It does so by decoding ethernet and IP
  broadcast and multicast messages. [Patrik]

o Fixed a bug that would make Nmap segfault if it failed to open an interface
  using pcap. The bug details and patch are posted here:
  http://seclists.org/nmap-dev/2011/q3/365 [Patrik]

o Ncat SCTP mode supports connection brokering now(--sctp --broker). [Shinnok]
